--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
-argparse==1.2.1
-gunicorn==19.1.1
-itsdangerous==0.24
-requests==2.5.3
+Flask==1.0.2
+Jinja2==2.10
+MarkupSafe==1.0
+Werkzeug==0.14.1
+argparse==1.4.0
+gunicorn==19.9.0
+itsdangerous==1.1.0
+requests==2.20.0
+billboard.py==5.0.0
+python-firebase==1.2
 wsgiref==0.1.2
-billboard.py==4.2.0
